Fix Buffs hover descriptions

--- a/MultiLanguage/languages/RU/dictionaries/_GameLocation.json
+++ b/MultiLanguage/languages/RU/dictionaries/_GameLocation.json
@@ -89,7 +89,7 @@
   "It worked! The lock-box swings open. Inside, there's a note:": "Сработало! Ящик распахнулся. Внутри записка:",
   "'Your first task: Bring a rainbow shell to the train platform. Leave it in the box. -Mr. Qi'": "'Твоя первая задача: Принеси радужную раковину на платформу поезда. Положи её в коробку. -Мр. Ци'",
   "It's a battery powered lock-box. Unfortunately, there's no battery in it.": "Это коробка с замком, работающая на батарейках. К сожалению в ней нет батареек.",
-  "You insert the skull key into the keyhole. It's a perfect fit!": "Вы вставляете ключ в замочную скважину, и он подходит идеально!",
+  "You insert the skull key into the keyhole. It's a perfect fit!": "Вы вставляете ключ-череп в замочную скважину. Он идеально подошёл!",
   "The door is locked.": "Дверь заперта.",
   "@key is sleeping.": "@key спит.",
   "Whatever this once was, it's now in ruins.": "Чем бы это ни было раньше, теперь это руины.",
