--- a/MultiLanguage/languages/RU/dictionaries/_Menus.json
+++ b/MultiLanguage/languages/RU/dictionaries/_Menus.json
@@ -334,7 +334,7 @@
   "Rusty Key": "Ржавый ключ",
   "Club Card": "Клубная карта",
   "Special Charm": "Особый шарм",
-  "Skull Key": "Ключ Черепа",
+  "Skull Key": "Ключ-череп",
   "@number Hoe Efficiency@newline@number Water Can Efficiency": "@number Эффективность мотыги@newline@number Эффективность лейки",
   "@number Fishing Rod Efficiency": "@number Эффективность удочки",
   "@number Axe Efficiency": "@number Эффективность топора",
