--- a/MultiLanguage/languages/RU/dictionaries/_Object.json
+++ b/MultiLanguage/languages/RU/dictionaries/_Object.json
@@ -26,16 +26,16 @@
   "__comment Buff.cs": "__comment Buff.cs",
   "Full": "Полный",
   "Quenched": "Закалка",
-  "Goblin's Curse@newline@number Speed@newline@number Defense": "Проклятие гоблина@newline@number Скорость@newline@number Защита",
-  "Slimed@newline@number Speed": "Слизнявость@newline@number Скорость",
-  "Jinxed@newline@number Defense": "Сглаз@newline@number Защита",
-  "Tipsy@newline@number Speed": "Навеселе@newline@number Скорость",
-  "Spooked@newline@number Attack": "Испуг@newline@number Атака",
-  "Frozen@newline@number Speed": "Заморозка@newline@number Скорость",
-  "Warrior Energy@newline@number Attack": "Энергия война@newline@number Атака",
-  "Yoba's Blessing@newlineInvincible": "Благославение Йобы@newlineНеуязвимость",
-  "Adrenaline Rush@newline@number Speed": "Прилив адреналина@newline@number Скорость",
-  "Oil of Garlic@newlineYour skin exudes a pungent aroma": "Чесночное масло@newlineВаша кожа испускает едкий аромат",
+  "Goblin's Curse@newline@number Speed@newline@number Defense@newline@newline@key": "Проклятие гоблина@newline@number Скорость@newline@number Защита@newline@newline@key",
+  "Slimed@newline@number Speed@newline@newline@key": "Слизнявость@newline@number Скорость@newline@newline@key",
+  "Jinxed@newline@number Defense@newline@newline@key": "Сглаз@newline@number Защита@newline@newline@key",
+  "Tipsy@newline@number Speed@newline@newline@key": "Навеселе@newline@number Скорость@newline@newline@key",
+  "Spooked@newline@number Attack@newline@newline@key": "Испуг@newline@number Атака@newline@newline@key",
+  "Frozen@newline@number Speed@newline@newline@key": "Заморозка@newline@number Скорость@newline@newline@key",
+  "Warrior Energy@newline@number Attack@newline@newline@key": "Энергия война@newline@number Атака@newline@newline@key",
+  "Yoba's Blessing@newlineInvincible@newline@newline@key": "Благославение Йобы@newlineНеуязвимость@newline@newline@key",
+  "Adrenaline Rush@newline@number Speed@newline@newline@key": "Прилив адреналина@newline@number Скорость@newline@newline@key",
+  "Oil of Garlic@newlineYour skin exudes a pungent aroma@newline@newline@key": "Чесночное масло@newlineВаша кожа испускает едкий аромат@newline@newline@key",
   "Magnetic Radius": "Магнитный Радиус",
   "Source: @key": "Источник: @key",
   "Duration: @number:@number": "Длительность: @number:@number",
