Fix AnimalShop description, etc

--- a/MultiLanguage/languages/RU/dictionaries/_KeyWords.json
+++ b/MultiLanguage/languages/RU/dictionaries/_KeyWords.json
@@ -443,5 +443,6 @@
   "Tool": "Инструмент",
   "Dagger": "Кинжал",
   "Club": "Дубинка",
-  "Sword": "Меч"
+  "Sword": "Меч",
+  "Ring": "Кольцо"
 }
