--- a/MultiLanguage/languages/RU/dictionaries/_TBinStrings.json
+++ b/MultiLanguage/languages/RU/dictionaries/_TBinStrings.json
@@ -16,7 +16,7 @@
   "Doesn't seem like Jas uses this much.": "Вряд ли Джес часто этим пользуется.",
   "Mmm.... microwave pizza.": "М-м-м... Пицца из микроволновки.",
   "Looks like someone was chopping vegetables but never finished.": "Кто-то шинковал овощи, но так и не закончил.",
-  "Why are you looking through my trash can?": "Зачем ты роешься в моём мусорнике?",
+  "\"Why are you looking through my trash can?": "Зачем ты роешься в моём мусорнике?",
   "Mostly empty pizza cartons.": "Одни коробки из-под пиццы.",
   "__comment ArchaeologyHouse.tbin": "__comment ArchaeologyHouse.tbin",
   "A History of The Gotoro Empire": "\"История Империи Готоро\"",
