1) add @keyS [NOT DONE!]
2) clean project + fix some dictionaries
3) add uploading townInterior.xnb & HospitalTiles.xnb to root Content folder.

--- a/MultiLanguage/languages/RU/dictionaries/Dialogues.json
+++ b/MultiLanguage/languages/RU/dictionaries/Dialogues.json
@@ -2450,7 +2450,7 @@
     "I'm sure you're excited, too.": "Я уверена, что ты тоже волнуешься.",
     "I love machines.": "Я люблю машины.",
     "Isn't technology fascinating?": "Разве технологии - это не увлекательно?",
-    "Do you ever think about @keys?": "Ты когда-нибудь думал о @keys?^Ты когда-нибудь думала о @keys?",
+    "Do you ever think about @keys?": "Ты когда-нибудь думал о @keyS?^Ты когда-нибудь думала о @keyS?",
     "It just popped into my head.": "Это просто пришло мне в голову.",
     "See you later.": "Увидимся позже.",
     "Are you enjoying the season?": "Тебе нравится лето?",
