--- a/MultiLanguage/languages/RU/dictionaries/_GameQuests.json
+++ b/MultiLanguage/languages/RU/dictionaries/_GameQuests.json
@@ -227,7 +227,7 @@
   "Hey, looks like you got the stone I asked for.@key": "Эй, похоже у тебя есть камень о котором я просила.@key",
   "Wonderful!": "Замечательно!",
   "That's a big help... thanks!": "Вот уж помог так помог... спасибо!",
-  "I am looking for someone to bring me @number @keys, @key    -Clint": "Я ищу кого-то, кто принес бы мне @number @keyR, @key -Клинт",
+  "I am looking for someone to bring me @number @keys, @key    -Clint": "Я ищу кого-то, кто принес бы мне @number @keySV, @key -Клинт",
   "to aid in the understanding of local minerals.": "что бы увеличить знание о местных минералах.",
   "for inspection.": "для проверки.",
   "as part of a local geological survey.": "для местной геологоразведки.",
@@ -280,10 +280,10 @@
   "fiends": "извергов",
   "creatures": "существ",
   "The elementals are pleased with the job you did. Here's your payment, as promised.": "Элементали довольны твоей работой. Вот твоя награда, как и обещано.",
-  "Wanted: Monster hunter to slay @number @keys in the local mines.": "Требуется: Охотник на монстров, что бы в местной шахте уничтожить @keys в количестве @number особей.",
+  "Wanted: Monster hunter to slay @number @keys in the local mines.": "Требуется: Охотник на монстров, что бы в местной шахте уничтожить @number @keySV.",
   "Ah, @! So you helped us with our monster problem? Thank you!": "Ах, @! Так это тебе мы обязаны за помощь с решением проблемы с монстрами? Спасибо!",
   "I hope you didn't go through too much trouble...": "Надеюсь, тебе это не доставило больших хлопот...",
-  "@number/@number @keys defeated": "@number/@number @keys уничтожить",
+  "@number/@number @keys defeated": "@number/@number @keySR уничтожино",
   "Frost Jellie": "Морозный слизень",
   "__comment": "SocializeQuest.cs",
   "Saying 'Hello'": "Сказать 'Привет'",
